- Added overflow checks to wordwrap() function. (Ilia)
- Added support for BINARY_DOUBLE and BINARY_FLOAT to PDO_OCI and OCI8 
  (also fixes bug #36764). (Tony)
- Removed the E_STRICT deprecation notice from "var". (Ilia)
- Fixed debug_zval_dump() to support private and protected members. (Dmitry)
- Fixed bug #36809 (__FILE__ behavior changed). (Dmitry)
- FIxed bug #36808 (syslog ident becomes garbage between requests). (Tony)
- Fixed bug #36756 (DOMDocument::removeChild corrupts node). (Rob)
- Fixed bug #36749 (SOAP: 'Error Fetching http body' when using HTTP Proxy).
  (Dmitry)
- Fixed bug #36743 (In a class extending XMLReader array properties are not 
  writable). (Tony)
- Fixed bug #36727 (segfault in pdo_pgsql bindValue() when no parameters are 
  defined). (Tony)
- Fixed bug #36697 (Transparency is lost when using imagecreatetruecolor).
  (Pierre)
- Fixed bug #36689 (Removed arbitrary limit on the length of syslog messages).
  (Ilia)
- Fixed bug #36629 (SoapServer::handle() exits on SOAP faults). (Dmitry)
- Fixed Bug #36614 (Segfault when using Soap). (Dmitry)
- Fixed bug #36568 (memory_limit setting on win32 has no effect). (Dmitry)
- Fixed bug #35988 (Unknown persistent list entry type in module shutdown).
  (Dmitry)

09 Mar 2006, PHP 5.1.3RC1
- Updated PCRE to version 6.6. (Andrei)
- Moved extensions to PECL:
  . ext/msession (Derick)
- Reimplemented FastCGI interface. (Dmitry)
- Improved SPL: (Marcus)
  - Fixed issues with not/double calling of constructors of SPL iterators.
  - Fixed issues with info-class/file-class in SPL directory handling classes.
  - Fixed ArrayIterator::seek().
  - Added SimpleXMLIterator::count().
  - Dropped erroneous RecursiveDirectoryIterator::getSubPathInfo().
- Improved SimpleXML: (Marcus, Rob)
  . Added SimpleXMLElement::getName() to retrieve name of element.
  . Added ability to create elements on the fly.
  . Added addChild() method for element creation supporting namespaces.