@@ -97,6 +97,8 @@ struct _soapMapping {
 	} map_class;
 };
 
+struct _soapHeader;
+
 struct _soapService {
 	sdlPtr sdl;
 
@@ -120,6 +122,7 @@ struct _soapService {
 	xmlCharEncodingHandlerPtr encoding;
 	HashTable *class_map;
 	int        features;
+	struct _soapHeader **soap_headers_ptr;
 };
 
 #define SOAP_CLASS 1
