@@ -11,7 +11,9 @@ PHP                                                                        NEWS
 - Removed the E_STRICT deprecation notice from "var". (Ilia)
 - Fixed debug_zval_dump() to support private and protected members. (Dmitry)
 - Fixed bug #36809 (__FILE__ behavior changed). (Dmitry)
-- FIxed bug #36808 (syslog ident becomes garbage between requests). (Tony)
+- Fixed bug #36808 (syslog ident becomes garbage between requests). (Tony)
+- Fixed bug #36721 (The SoapServer is not able to send a header that it didn't
+  receive). (Dmitry)
 - Fixed bug #36756 (DOMDocument::removeChild corrupts node). (Rob)
 - Fixed bug #36749 (SOAP: 'Error Fetching http body' when using HTTP Proxy).
   (Dmitry)
